--- a/Code/app/src/main/res/layout/activity_login.xml
+++ b/Code/app/src/main/res/layout/activity_login.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".Login">
 
     <TextView
@@ -29,6 +30,7 @@
         android:layout_marginLeft="64dp"
         android:layout_marginTop="128dp"
         android:text="@string/user"
+        android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleView" />
@@ -42,6 +44,7 @@
         android:ems="10"
         android:hint="@string/username_here"
         android:inputType="textPersonName"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.17"
         app:layout_constraintStart_toEndOf="@+id/usernameView"
@@ -56,8 +59,8 @@
         android:layout_marginTop="128dp"
         android:layout_marginEnd="140dp"
         android:layout_marginRight="140dp"
-        android:text="@string/confirm"
         android:onClick="loginButton"
+        android:text="@string/confirm"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/userText" />
