--- a/Code/app/src/main/res/layout/activity_mood_history.xml
+++ b/Code/app/src/main/res/layout/activity_mood_history.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".MoodHistory">
 
     <HorizontalScrollView
@@ -20,10 +20,11 @@
             android:id="@+id/FilterButtons"
             android:layout_width="wrap_content"
             android:layout_height="match_parent">
+
             <TextView
-                android:paddingTop="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:paddingTop="10dp"
                 android:text="Filter By:">
 
             </TextView>
@@ -36,8 +37,7 @@
                 android:onClick="greatFilterButton"
                 android:padding="10dp"
                 android:scaleType="fitCenter"
-                android:src="@drawable/great">
-            </ImageButton>
+                android:src="@drawable/great"></ImageButton>
 
             <ImageButton
                 android:id="@+id/GoodFilterButton"
@@ -47,8 +47,7 @@
                 android:onClick="goodFilterButton"
                 android:padding="10dp"
                 android:scaleType="fitCenter"
-                android:src="@drawable/good">
-            </ImageButton>
+                android:src="@drawable/good"></ImageButton>
 
             <ImageButton
                 android:id="@+id/NeutralFilterButton"
@@ -58,8 +57,7 @@
                 android:onClick="neutralFilterButton"
                 android:padding="10dp"
                 android:scaleType="fitCenter"
-                android:src="@drawable/neutral">
-            </ImageButton>
+                android:src="@drawable/neutral"></ImageButton>
 
             <ImageButton
                 android:id="@+id/BadFilterButton"
@@ -69,8 +67,7 @@
                 android:onClick="badFilterButton"
                 android:padding="10dp"
                 android:scaleType="fitCenter"
-                android:src="@drawable/bad">
-            </ImageButton>
+                android:src="@drawable/bad"></ImageButton>
 
             <ImageButton
                 android:id="@+id/WorstFilterButton"
@@ -80,16 +77,14 @@
                 android:onClick="worstFilterButton"
                 android:padding="10dp"
                 android:scaleType="fitCenter"
-                android:src="@drawable/worst">
-            </ImageButton>
+                android:src="@drawable/worst"></ImageButton>
 
             <Button
                 android:id="@+id/ClearFilterButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="clearFilterButton"
-                android:text="Clear">
-            </Button>
+                android:text="Clear"></Button>
 
 
         </LinearLayout>
@@ -144,11 +139,11 @@
         android:id="@+id/requestsButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/requests"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginBottom="8dp"
         android:onClick="requestButton"
+        android:text="@string/requests"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -170,8 +165,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="64dp"
-        android:text="@string/view_followers"
         android:onClick="viewFollowButton"
+        android:text="@string/view_followers"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
