--- a/Code/app/src/main/res/layout/activity_add.xml
+++ b/Code/app/src/main/res/layout/activity_add.xml
@@ -205,7 +205,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.75"
+                app:layout_constraintGuide_percent="0.5"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
 
@@ -215,6 +215,17 @@
                 android:layout_marginTop="24dp"
                 app:layout_constraintStart_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/ConfirmAdd" />
+
+            <ImageView
+                android:id="@+id/tempImageView"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:scaleType="fitCenter"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/Addguideline"
+                app:layout_constraintTop_toTopOf="@id/Addcontent"
+                app:layout_constraintDimensionRatio="1:1">
+            </ImageView>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
