--- a/Code/app/src/main/res/layout/activity_follow.xml
+++ b/Code/app/src/main/res/layout/activity_follow.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
     <EditText
-        android:id="@+id/Username"
+        android:id="@+id/add_request"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
