--- a/Code/app/src/main/res/layout/activity_follow_history.xml
+++ b/Code/app/src/main/res/layout/activity_follow_history.xml
@@ -7,7 +7,7 @@
     tools:context=".FollowHistory">
 
     <ListView
-        android:id="@+id/city_list"
+        android:id="@+id/request_list"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="50dp"
