--- a/Code/app/src/main/res/layout/follow_content.xml
+++ b/Code/app/src/main/res/layout/follow_content.xml
@@ -37,13 +37,13 @@
     </TextView>
 
     <TextView
+        android:id="@+id/user_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/user_text"
+        android:layout_marginLeft="20dp"
         android:padding="20dp"
-        android:text="User"
-        android:textSize="15dp"
-        android:layout_marginLeft="20dp">
+        android:text='""'
+        android:textSize="15dp">
 
     </TextView>
 
